--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,17 @@ body {
     width: 10px;
     display: flex;
 }
+
+.popup {
+      display: none;
+      position: fixed;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: 300px;
+      padding: 20px;
+      background: #fff;
+      border: 1px solid #ccc;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      z-index: 9999;
+    }
