--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,20 @@
-.h1 {
-    color: red;
+h1 {
+    /* color: rgb(43, 255, 0); */
 }
 
-.h2 {
-    color: red;
+h2 {
+    color: rgb(25, 0, 255);
 }
 
 body {
-    background-color: #255471;
-    color: #e40000;
 }
 
 header {
-    background-color: #255471;
 }
 
 .logo {
     height: 100px;
-    width: 100px;
+    width: 500px;
     display: flex;
 }
 
@@ -28,32 +25,35 @@ header {
 }
 
 .message-text {
-    color: #255471;
+    align-content: center;
+    background-color: rgb(255, 255, 138);
+    border-radius: 50px;
     height: 100px;
-    width: 100px;
+    width: 500px;
     display: flex;
 }
 
 .warning-text {
+    align-content: center;
+    background-color: rgb(255, 255, 255);
+    border-radius: 50px;
     height: 100px;
-    width: 100px;
+    width: 500px;
     display: flex;
 }
 
 #studioFooter {
-    background-color: #255471;
-    color: #fff;
+
 }
 
 .footerCopyright {
     height: 100px;
-    width: 100px;
+    width: 100%;
     display: flex;
+    background-color: rgb(111, 111, 206);
 }
 
 .pwdLoginTextbox {
-    height: 100px;
-    width: 100px;
     display: flex;
 }
 
